# national_scaffolding

./: .env  .gitignore  .replit  ABOUT_PAGE_SUCCESS.md  ABOUT_PAGE_UPDATED.md  ADMIN_FIXES_REPORT.md  ADMIN_GUIDE.md  ADMIN_LOGIN_FIXED.txt  ADMIN_LOGIN_QUICK_START.md  ADMIN_LOGIN_USING_NEON.md  COMPLETE_CSS_CODE.txt  CSS_CHANGELOG.md  CSS_CONSOLIDATION_COMPLETE.md  CSS_FILE_GUIDE.md  CSS_REDESIGN_COMPLETE.md  CSS_REQUIREMENTS_CHECKLIST.md  CUPLOCK_ROUTES_DOCUMENTATION.md  CUPLOCK_ROUTES_TEST_REPORT.md  CUPLOCK_ROUTES_TEST_SUMMARY.txt  DEPLOYMENT_CHECKLIST.txt  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DESIGN_TRANSFORMATION.md  DOCUMENTATION_INDEX.txt  DOWNLOAD_BUTTON_ADDED.md  ENV_TEMPLATE.txt  FINAL_CHECKLIST.txt  FINAL_DEPLOYMENT_SUMMARY.txt  FIXES_SUMMARY.md  FIXES_SUMMARY.txt  HERO_SETUP_GUIDE.md  HERO_TEMPLATE_CODE.txt  IMAGES_FIX_INSTRUCTIONS.txt  IMAGE_EMBEDDED_SUCCESS.txt  IMAGE_FIXES_COMPLETE.md  IMAGE_SETUP_INSTRUCTIONS.txt  IMPLEMENTATION_SUMMARY.txt  ISSUE_RESOLUTION_REPORT.md  LAYOUT_DIAGRAM.txt  MODERN_CORPORATE_THEME.md  (+111 more)
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1762285639927_1762285639928.txt  Pasted--I-already-have-a-complete-working-website-with-all-my-HTML-templates-divs-and-sections-properly--1762414697344_1762414697345.txt  Pasted--head-body-Navigation-nav-class-navbar-div-class-nav-containe-1762285552623_1762285552624.txt  Pasted--margin-0-padding-0-box-sizing-border-box-root-royal-blue--1762367075984_1762367075986.txt  (+5 more)
templates/: about.html  about_backup.html  admin_analytics.html  (+37 more)
(+5 files in other folders)
